# advent_of_code

./: .gitignore  README.md  pyproject.toml
2020/day01/: solution.py
2020/day02/: solution.py
2020/day03/: solution.py
2020/day04/: solution.py
2020/day05/: solution.py
2020/day06/: solution.py
2020/day07/: solution.py
2020/day08/: solution.py
2020/day09/: solution.py
2020/day10/: solution.py
2020/day11/: solution.py
2020/day12/: solution.py
2020/day13/: solution.py
2023/day01/: solution.py
2023/day02/: solution.py
2023/day03/: solution.py
2023/day04/: solution.py
2023/day05/: solution.py
2023/day06/: solution.py
2023/day07/: solution.py
2023/day08/: solution.py
2023/day09/: solution.py
2023/day10/: solution.py
2023/day11/: solution.py
2023/day12/: solution.py
2023/day13/: solution.py
2023/day14/: solution.py
2023/day15/: solution.py
2023/day16/: solution.py
2023/day17/: solution.py
2023/day18/: solution.py
2023/day19/: solution.py
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py  solution2.py
day06/: solution.py
day07/: example.txt  solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
day13/: solution.py
day14/: solution.py
day15/: solution.py
day16/: solution.py
day17/: solution.py
day18/: solution.py
day19/: solution.py
day20/: solution.py
day21/: solution.py
day22/: solution.py
day23/: solution.py
day24/: solution.py
day25/: solution.py
(+25 files in other folders)
