[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023"
authors = ["Wessel Radstok <wesse.radstok@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
